imrpvoements to EC balances, improvements to AUDIT scans